tests/ui/delimiter-span.stderr
error: no rules expected the token `{`
  --> tests/ui/delimiter-span.rs:17:16
   |
3  | macro_rules! picky {
   | ------------------ when calling this macro
...
17 |         picky!({ 123, self });
   |                ^ no rules expected this token in macro call

error: no rules expected the token `{`
  --> tests/ui/delimiter-span.rs:18:16
   |
3  | macro_rules! picky {
   | ------------------ when calling this macro
...
18 |         picky!({ 123 });
   |                ^ no rules expected this token in macro call

warning: 1st rule of macro `picky` is never used
 --> tests/ui/delimiter-span.rs:4:5
  |
4 |     ($(t:tt)*) => {};
  |     ^^^^^^^^^^
  |
  = note: `#[warn(unused_macro_rules)]` on by default
